# sLSP4SNFs

./: LICENSE  README.md  pyproject.toml
examples/: KIC9533489.out  tutorial.ipynb
sLSP4SNFs/: LICENSE  README.md
sLSP4SNFs/examples/: tutorial.ipynb
sLSP4SNFs/src/sLSP4SNFs/: plotting.py
src/sLSP4SNFs/: __init__.py  config.py  main.py  plotting.py
src/sLSP4SNFs/data/: SNF_simulation_table.csv
