[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sLSP4SNFs"
version = "1.0.0"
description = "Sliding Lomb–Scargle analysis for Super-Nyquist Frequencies"
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "Xuan Wang", email = "wang.xuan@mail.bun.edu.cn" }
]

license = { text = "MIT" }

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "lightkurve",
    "astropy"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sLSP4SNFs = ["data/*.csv"]
